# book-tracker

./: .dockerignore  .env.example  DEVELOPER.md  Dockerfile  README.md  alembic.ini  books.db  create_default_admin.py  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  hello.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: docker.yml
app/: admin_routes.py  auth.py  auth_routes.py  database.py  main.py  models.py  schemas.py  themes.py
app/static/css/: theme.css
app/templates/: base.html  book_form.html  edit_book.html  index.html  login.html  profile.html  register.html  settings.html
app/templates/admin/: dashboard.html  stats.html  users.html
app/templates/partials/: book_card.html
migrations/: env.py  manual_migration.sql
migrations/versions/: add_rating_field.py  initial_migration.py
scripts/: populate_db.py
